--- a/app/src/main/res/drawable/custom_border_simple.xml
+++ b/app/src/main/res/drawable/custom_border_simple.xml
@@ -2,7 +2,7 @@
 <shape android:shape="rectangle"
     xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <stroke android:color="@color/colorBlack"
+    <stroke android:color="@color/colorGray"
         android:width="1dp"/>
     <solid android:color="@color/colorWhite"/>
 </shape>
